test/compile-fail/unbounded_2.lisp
; test unbouned
(defun test (x) (print y))